--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
   padding: 0;
   box-sizing: border-box;
   border: none;
-  font-family: "Source Code Pro";
 }
 
 .AboutMe {
@@ -160,4 +159,13 @@ https://mkrtchyan.ga
 @keyframes animated-cursor{
   from{border-bottom-color: rgba(0,0,0,.75);}
   to{border-bottom-color: transparent;}
+}
+
+input[type="text"], textarea.form-control {
+  background-color: rgba(0,0,0,0);
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 0;
+  border-radius: 0px;
+  color: rgb(51,51,51);
 }
