--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto|Quattrocento+Sans&display=swap");
 @import url('https://fonts.googleapis.com/css?family=Notable');
 @import url('https://fonts.googleapis.com/css?family=Inter');
-
+@import url('https://fonts.googleapis.com/css?family=Anonymous+Pro');
 
 * {
   margin: 0;
@@ -25,6 +25,9 @@ html {
   --blue: #add4ef;
   --lavender: #d995f6;
   height: 100%;
+  --minh: 40vh;
+ --color1: black;
+ --color2: white;
 }
 
 #parent {
@@ -33,12 +36,12 @@ html {
   overflow: hidden;
   font-family: 'Source Code Pro', monospace;
   font-size: 28px;
-  color: rgba(255,255,255,.70);
+  /* color: rgba(255,255,255,.70); */
   position: relative;
 }
 
 #border {
-  border-bottom: solid 3px rgba(0,0,0,.75);
+  border-bottom: solid 3px black;
   position: absolute;
   right: -7px;
   width: 20px;
@@ -47,7 +50,7 @@ html {
 /* Animation */
 @media (min-width: 768px) {
   #parent {
-    animation: animated-text 8s steps(51,end) 1s 1 normal both;
+    animation: animated-text 10s steps(51,end) 1s 1 normal both;
   }
 }
 
@@ -59,7 +62,7 @@ html {
 }
 @media (min-width: 768px) {
   #border {
-     animation: animated-cursor 600ms steps(51,end) infinite;
+     animation: animated-cursor 10s steps(51,end) 1s 1 normal both;
   }
 }
 @media (max-width: 768px) {
@@ -294,14 +297,27 @@ input[type="text"], input[type="email"], textarea.form-control {
 /* Academic */
 
 .academic {
+  /* min-height: 80vh; */
+}
+
+.academic-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 1%;
-  row-gap: 2%;
-  min-height: 80vh;
+  padding-bottom: 1%;
+}
+
+.academic img {
+  /* grid-column: 2; */
+  width: 100%;
+  /* filter: grayscale(); */
+}
+.academic img:hover {
+  /* filter: none; */
 }
 
 .academic-container {
+  /* grid-column: 1; */
   background-color: #072a40;
   padding: 3%;
   color: black;
@@ -315,9 +331,16 @@ input[type="text"], input[type="email"], textarea.form-control {
   /* color: var(--lavender); */
 }
 
-@media (max-width: 800px) {
-  .academic {
-    grid-template-columns: repeat(1, 1fr);
+@media (max-width: 1000px) {
+  .academic-grid {
+    grid-template-columns: repeat(1, 1fr) !important;
+  }
+  .academic-grid img {
+    grid-column: 1 !important;
+  }
+  .academic-container {
+    grid-column: 1 !important;
+    margin-bottom: 1%;
   }
 }
 
@@ -371,10 +394,10 @@ input[type="text"], input[type="email"], textarea.form-control {
   max-width: 100%;
   height: 100%;
   vertical-align: middle;
-  filter: grayscale();
+  /* filter: grayscale(); */
 }
 .project-image img:hover {
-  filter: none;
+  /* filter: none; */
 }
 
 @media (max-width: 1000px) {
@@ -411,4 +434,82 @@ input[type="text"], input[type="email"], textarea.form-control {
   margin-top: 5%;
   /* background-color: #433834; */
   padding: 5%;
+}
+
+
+/* HOME PAGE */
+
+.homepage {
+  /* display: grid; */
+  margin-top: 3%;
+  background-color: #ffffff;
+  /* border: 5px solid black; */
+  padding: 5% 5% 5% 5%;
+  /* opacity: 0.8;
+  background-image:  linear-gradient(#A9A9A9 1px, transparent 1px), linear-gradient(to right, #A9A9A9 1px, #ffffff 1px);
+  background-size: 70px 70px; */
+  background-color: #ffffff;
+  opacity: 0.8;
+  background-size: 50px 20px;
+  background-image:  repeating-linear-gradient(0deg, #a9a9a9, #a9a9a9 1px, #ffffff 1px, #ffffff);
+}
+.home-right-bg {
+  /* background-color: white; */
+  min-height: 60vh;
+  /* width: 50%; */
+  /* grid-row: 1; */
+  /* padding: 5%; */
+  color: black;
+  /* float: right; */
+  margin: 0;
+  text-align: center;
+}
+
+.home-right-bg h1 {
+  margin-top: 2%;
+}
+
+.home-right-bg h2 {
+  margin-top: 2%;
+}
+
+.home-right-bg h3 {
+  margin-top: 2%;
+}
+
+.home-right-bg p {
+  margin-top: 2%;
+}
+.home-name-right {
+  /* float: left; */
+  font-size: 9vw;
+  /* width: 100%; */
+}
+
+
+
+
+
+.line-1{
+    border-right: 2px solid rgba(0,0,0,.75);
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    font-size: 9vw;
+    width: 100%;
+}
+
+
+/* Animation */
+.anim-typewriter{
+  animation: typing 4s steps(16, end) forwards,
+             blinking .25s infinite;
+}
+@keyframes typing{
+  from{width: 0;}
+  to{width: 8.8em;}
+}
+@keyframes blinking{
+  from{border-right-color: rgba(0,0,0,1);}
+  to{border-right-color: transparent;}
 }
