--- a/src/App.css
+++ b/src/App.css
@@ -408,13 +408,13 @@ input[type="text"], input[type="email"], textarea.form-control {
   }
   .project-content {
     grid-column: 1 !important;
-    grid-row: 1 !important;
-    margin-bottom: 2%;
+    grid-row: 2 !important;
+    /* margin-bottom: 2%; */
     margin-top: 2%;
   }
   .project-image {
     grid-column: 1 !important;
-    grid-row: 2 !important;
+    grid-row: 1 !important;
   }
 }
 
